Wed Jan 13 13:51:54 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Message_Queue_T.cpp: Moved

          #if defined (ACE_HAS_WIN32_OVERLAPPED_IO)
          #include "ace/Message_Queue_NT.h"
          #endif /* ACE_HAS_WIN32_OVERLAPPED_IO */
  
          to outside the versioned namespace block.  Thanks to Johnny for
          reporting this.
  
Wed Jan 13 09:03:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Only check run*.pl files when the filenames starts with run

Wed Jan 13 06:45:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_types.h:
        * ace/OS_NS_arpa_inet.cpp:
        * ace/OS_NS_unistd.inl:
          VxWorks 6.8 fixes

        * ace/UUID.cpp:
          Only one exit point for operator=, const change, initialise pointer with 0

Wed Jan 13 03:24:06 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Message_Queue.h,
        * ace/Message_Queue_T.cpp: Moved the code

          #if defined (ACE_HAS_WIN32_OVERLAPPED_IO)
          #include "ace/Message_Queue_NT.h"
          #endif /* ACE_HAS_WIN32_OVERLAPPED_IO */

          from ace/Message_Queue.h to ace/Message_Queue_T.cpp since that
          is more localized.

Wed Jan 13 02:54:10 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/XtReactor/XtReactor.cpp: Removed stray tabs.  Thanks to
          Johnny for reporting this.

Tue Jan 12 20:25:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Disable run_test.pl checking for some directories that
          aren't converted yet

Tue Jan 12 19:52:04 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/Time_Value.inl:
          Fixed typo.

        * ace/config-openbsd.h:
          Removed ACE_LACKS_STRFTIME.

Tue Jan 12 19:41:07 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/config-integritySCA.h:
          Removed ACE_LACKS_FILE_FCNTL. It is no longer used.
